--- a/application/pipacker/view/mainpage/index.html
+++ b/application/pipacker/view/mainpage/index.html
@@ -139,7 +139,7 @@
 				{foreach $works_list as $val}
 					<div class="col-lg-4">
 						<a href="javascript:;">
-							<img src="__PUBLIC_PIPACKER__/{$val.works_src}" class="m_img" data-id="{$val.works_id}">
+							<img src="{$val.works_src}" class="m_img" data-id="{$val.works_id}">
 							<p>© {$val.user_name}</p>
 						</a>
 					</div>
@@ -167,7 +167,7 @@
 
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
-	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js?1"></script>
 
 	<script>
 		var $show_img_list = $(".show_img_list");
