--- a/public/static/pipacker/css/mainpage.css
+++ b/public/static/pipacker/css/mainpage.css
@@ -146,7 +146,7 @@ span.glyphicon-ok-circle{
 	z-index: 4;
 	text-align: right;
     position: absolute;
-    /*display: none;*/
+    display: none;
     top: 41px;
     box-shadow: rgb(0, 0, 0) 0px 0px 10px;
     border: 2px solid rgb(51, 51, 51);
