--- a/public/static/pipacker/css/mainpage.css
+++ b/public/static/pipacker/css/mainpage.css
@@ -84,6 +84,9 @@ ul{
     width: 80%;
     box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 }
+.support {
+	position: relative;
+}
 .support span{
 	margin:0 2px;
 	cursor: pointer;
@@ -135,5 +138,53 @@ span.glyphicon-remove-circle{
 }
 span.glyphicon-ok-circle{
 	color:green;
+}
+.per_list_show {
+	width: 150px;
+	font-size: 16px;
+	position: absolute;
+	right: 99px;
+	z-index: 4;
+	text-align: right;
+    position: absolute;
+    display: none;
+    top: 41px;
+    box-shadow: rgb(0, 0, 0) 0px 0px 10px;
+    border: 2px solid rgb(51, 51, 51);
+    border-radius: 5px;
+    background: rgb(0, 0, 0);
+    
+}
+.per_list_show:before,.per_list_show:after {
+	content: "";
+    border: solid transparent;
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    transform: rotate(180deg);
+}
+.per_list_show:before {
+    border-color: rgba(37,37,37,0);
+    border-top-color: #252525;
+    border-width: 19px;
+    left: 84px;
+    top: -38px;
+}
+.per_list_show:after {
+    border-color: rgba(8,8,8,0);
+    border-top-color: #080808;
+    border-width: 15px;
+    left: 87.6px;
+    top: -30.5px;
+}
+.per_list_show ul {
+	width: 100%;
+	margin-bottom: 0;
+	padding: 5px 0;
+}
+.per_list_show ul li {
+	padding: 10px;
+	padding: 5px 10px;
 }
 
