--- a/application/pipacker/view/mainpage/index.html
+++ b/application/pipacker/view/mainpage/index.html
@@ -133,14 +133,14 @@
 		<div class="show_img">
 			<div class="show_img_title">
 			  <ul class="nav nav-tabs" role="tablist">
-			    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">最受欢迎的</a></li>
-			    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">最新发布的</a></li>
-			    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">获奖作品</a></li>
+			    <li role="presentation" class="active"><a class="nav_main_btn" href="#home" aria-controls="home" role="tab" data-toggle="tab">最受欢迎的</a></li>
+			    <li role="presentation"><a class="nav_main_btn" href="#profile" aria-controls="profile" role="tab" data-toggle="tab">最新发布的</a></li>
+			    <li role="presentation"><a class="nav_main_btn" href="#messages" aria-controls="messages" role="tab" data-toggle="tab">获奖作品</a></li>
 			  </ul>
 			</div>
 
-			  <div class="tab-content">
-			    <div role="tabpanel" class="tab-pane active show_img_list" id="home">
+			  <div class="tab-content show_img_list">
+			    <div role="tabpanel" class="tab-pane active" id="home">
 			    	<div class="row show_img_content">
 					{foreach $works_list as $val}
 						<div class="col-lg-4">
@@ -152,28 +152,14 @@
 					{/foreach}
 					</div>
 			    </div>
-			    <div role="tabpanel" class="tab-pane show_img_list" id="profile">
+			    <div role="tabpanel" class="tab-pane" id="profile">
 			    	<div class="row show_img_content">
-					{foreach $works_list as $val}
-						<div class="col-lg-4">
-							<a href="javascript:;">
-								<img src="{$val.works_src}" class="m_img" data-id="{$val.works_id}">
-								<p>© {$val.user_name}</p>
-							</a>
-						</div>
-					{/foreach}
+					
 					</div>
 			    </div>
-			    <div role="tabpanel" class="tab-pane show_img_list" id="messages">
+			    <div role="tabpanel" class="tab-pane" id="messages">
 			    	<div class="row show_img_content">
-					{foreach $works_list as $val}
-						<div class="col-lg-4">
-							<a href="javascript:;">
-								<img src="{$val.works_src}" class="m_img" data-id="{$val.works_id}">
-								<p>© {$val.user_name}</p>
-							</a>
-						</div>
-					{/foreach}
+					
 					</div>
 			    </div>
 			  </div>
@@ -188,7 +174,9 @@
 	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js?1"></script>
 
 	<script>
-		var page = 1; 
+		var page = 1;
+		var more_lock = true;
+		var url = "{:url('/qworks/Hot')}";
 		var $show_img_list = $(".show_img_list");
 		$show_img_list.on("click",function(el){
 			var this_elm = $(el.target);
@@ -198,14 +186,12 @@
 				location.href = "{:url('photoshow/index')}";
 			}
 		});
-		$(".more").on('click',function(){
-			page++;
-			$.ajax({
-				url:"{:url('/works')}",
-				type:"get",
-				data:{"page":page},
-				success:function(data){
-					if(!$.isEmptyObject(data)){
+		var $nav_main_btn = $(".nav_main_btn");
+		// console.log($nav_main_btn);
+		$nav_main_btn.eq(1).on("click",function(){
+			page=1;
+			$.get("{:url('/works')}").done(function(data){
+				if(!$.isEmptyObject(data)){
 						redata = $.parseJSON(data);
 						var str = '';
 						for(var i=0;i<redata.rearray.length;i++){
@@ -213,10 +199,61 @@
 								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
 								 '<p>© '+redata.rearray[i].user_name+'</p></a></div>';
 						}
-						$show_img_list.find(".show_img_content").html($(str));
+						$show_img_list.find(".show_img_content").eq(1).html($(str));
+						url = "{:url('/works')}";
+						more_lock = true;
+						
+						$(".more").text("发现更多");
 					}
-				}
 			});
+		});
+		$nav_main_btn.eq(0).on("click",function(){
+			page=1;
+			$.get("{:url('/qworks/Hot')}",{page:page}).done(function(data){
+				if(!$.isEmptyObject(data)){
+						redata = $.parseJSON(data);
+						var str = '';
+						for(var i=0;i<redata.rearray.length;i++){
+							str+='<div class="col-lg-4"><a href="javascript:;">'+
+								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
+								 '<p>© '+redata.rearray[i].user_name+'</p></a></div>';
+						}
+						$show_img_list.find(".show_img_content").eq(0).html($(str));
+						url = "{:url('/qworks/Hot')}";
+						more_lock = true;
+						$(".more").text("发现更多");
+					}
+			});
+		});
+		$(".more").on('click',function(){
+			page++;
+			// console.log(page);
+			if(more_lock){
+				$.ajax({
+					url:url,
+					type:"get",
+					data:{"page":page},
+					success:function(data){
+						if(!$.isEmptyObject(data)){
+							redata = $.parseJSON(data);
+							var str = '';
+							if(0==redata.status){
+								for(var i=0;i<redata.rearray.length;i++){
+								str+='<div class="col-lg-4"><a href="javascript:;">'+
+									 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
+									 '<p>© '+redata.rearray[i].user_name+'</p></a></div>';
+								}
+								$show_img_list.find(".show_img_content").append($(str));
+							}else{
+								more_lock = false;
+								$(".more").text("没有啦");
+							}
+						}
+					}
+				});
+			}else{
+				$(".more").text("没有啦");
+			}
 		});
 	</script>
 </body>
