--- a/application/pipacker/view/photoshow/index.html
+++ b/application/pipacker/view/photoshow/index.html
@@ -386,7 +386,7 @@
         <div class="comment_connent">
           <div class="media">
             <div class="media-left">
-                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+                <!-- <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt=""> -->
             </div>
             <div class="media-body">
               <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
@@ -397,7 +397,7 @@
         <div class="comment_connent">
           <div class="media">
             <div class="media-left">
-                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+                <!-- <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt=""> -->
             </div>
             <div class="media-body">
               <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
@@ -408,7 +408,7 @@
         <div class="comment_connent">
           <div class="media">
             <div class="media-left">
-                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+               <!--  <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt=""> -->
             </div>
             <div class="media-body">
               <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
@@ -419,7 +419,7 @@
         <div class="comment_connent">
           <div class="media">
             <div class="media-left">
-                <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt="">
+                <!-- <img class="media-object" src="__PUBLIC_PIPACKER__/pipacker/images/3.jpg" alt=""> -->
             </div>
             <div class="media-body">
               <h4 class="media-heading">Media heading<span style="font-size: 12px; color: #555; vertical-align: text-top; display: inline-block;position: absolute; right: 10px;">30分钟前</span></h4>
