商店、个人主页

--- a/application/pipacker/view/dialogue/index.html
+++ b/application/pipacker/view/dialogue/index.html
@@ -243,5 +243,6 @@
 
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js"></script>
 </body>
 </html>
