--- a/application/pipacker/view/photoshow/index.html
+++ b/application/pipacker/view/photoshow/index.html
@@ -524,6 +524,7 @@
 
 <script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 <script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
+  <script src="__PUBLIC_PIPACKER__/pipacker/js/user.js"></script>
 <script src="__PUBLIC_PIPACKER__/pipacker/js/works.js"></script>
 <script type="text/javascript">
   $(function (){
