--- a/application/pipacker/view/index.html
+++ b/application/pipacker/view/index.html
@@ -3,12 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/css/bootstrap.min.css">
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
-	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script> -->
 </head>
 <body>
 	hello,pipacker!
 	<a href="" class="btn btn-info">hello,pipacker!</a>
 </body>
 </html>
+<script type="text/javascript">
+	var arr=["one","two","three","four"];
+
+	$.(each,function(){alert(this); });
+</script>
