--- a/application/pipacker/view/photography/index.html
+++ b/application/pipacker/view/photography/index.html
@@ -179,6 +179,7 @@
 	</style>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js"></script>
 </head>
 <body>
 	{include file="common/navigation"}
@@ -186,13 +187,13 @@
 		<div class="photo_main container">
 			<div class="">
 				<div class="photo_main_nav">
-					<div class="photo_main_nav_item_selected"><a href="">人像</a></div>
-					<div class="photo_main_nav_item"><a href="">风景</a></div>
-					<div class="photo_main_nav_item"><a href="">生态</a></div>
-					<div class="photo_main_nav_item"><a href="">纪实</a></div>
-					<div class="photo_main_nav_item"><a href="">生活</a></div>
-					<div class="photo_main_nav_item"><a href="">LOMO</a></div>
-					<div class="photo_main_nav_item"><a href="">观念</a></div>
+					<div class="photo_list_nav photo_main_nav_item_selected"><a href="javascript:;">人像</a></div>
+					<div class="photo_list_nav photo_main_nav_item"><a href="javascript:;">风景</a></div>
+					<div class="photo_list_nav photo_main_nav_item"><a href="javascript:;">生态</a></div>
+					<div class="photo_list_nav photo_main_nav_item"><a href="javascript:;">纪实</a></div>
+					<div class="photo_list_nav photo_main_nav_item"><a href="javascript:;">生活</a></div>
+					<div class="photo_list_nav photo_main_nav_item"><a href="javascript:;">LOMO</a></div>
+					<div class="photo_list_nav photo_main_nav_item"><a href="javascript:;">观念</a></div>
 				</div>
 			</div>
 			<div class="pull-right">
@@ -337,5 +338,31 @@
 			</div>
 		</div>
 	</div>
+
+	<script type="text/javascript">
+		// var p_list_nav = document.getElementsByClassName("photo_list_nav");
+		// for (var i = 0; i < p_list_nav.length; i++) {
+		// 	p_list_nav[i].index = i;
+		// 	console.log(p_list_nav[i])
+		// 	p_list_nav[i].onclick = function() {
+		// 		for (var i = 0; i < p_list_nav.length; i++) {
+		// 			p_list_nav[i].className = "photo_list_nav photo_main_nav_item";
+		// 		}
+		// 		p_list_nav[this.index].className = "photo_list_nav photo_main_nav_item_selected";
+		// 	}
+		// }
+		
+		$(function() {
+			$(".photo_list_nav").each(function(index,el) {
+					// console.log($(el).eq(index));
+				$(el).on("click", function() {
+					// console.log($(el).eq(index));
+					$(".photo_list_nav").removeClass("photo_main_nav_item_selected").addClass("photo_main_nav_item");
+					$(el).removeClass("photo_main_nav_item").addClass("photo_main_nav_item_selected");
+				})
+				
+			})
+		})
+	</script>
 </body>
 </html>
