--- a/application/pipacker/view/prints/index.html
+++ b/application/pipacker/view/prints/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/css/bootstrap.min.css">
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/works.js"></script>
 	<style>
 		body{
 			background: #e9e9e9;
@@ -34,7 +35,7 @@
 		.logo img{
 			height: 55px;
 		    display: block;
-		    margin: -10px auto
+		    margin: -10px auto;
 		}
 		.search_input{	
 		    font-size: 13px;
@@ -94,11 +95,12 @@
 			height:100%;
 			display: inline-block;
 			position: relative;
+			overflow: hidden;
 		}		
 	    .hf_btn{
 			position: absolute;
 			top:-50%;
-			margin-top:50%;
+			margin-top:55%;
 			font-size: 30px;
 			font-size: 100;
 			cursor: pointer;
@@ -114,6 +116,9 @@
 		.menu_right{
 			display: inline-block;
 			width:19%;
+			position: relative;
+			top: -270px;
+			left: 13px;
 		}
 		.modal-dialog .cancel{
 			text-align: center;
@@ -144,6 +149,95 @@
 	        height: 100%;
 	        width: 100%;
 	    }
+	    .buy_left, .buy_right {
+	    	float: left;
+	    	width: 50%;
+	    	padding: 30px;
+	    }
+	    .buy_left h1 {
+	    	padding-bottom: 40px;
+	    	padding-top: 0;
+	    }
+	    .buy_left .s_img {
+			max-height: 200px;
+			max-width: 350px;
+			display: block;
+			padding-bottom: 40px;
+	    }
+		.buy_left table tr {
+			line-height: 30px;
+			font-size: 16px;
+		}
+		.buy_left table tr td {
+			width: 100px;
+			color: #999;
+		}
+		.buy_left h2 {
+			font-size: 27px;
+		}
+		.buy_left .set_format p input[type="radio"] {
+			width: 50px;
+			border: none;
+		}
+		.buy_left .set_format p .format_sz {
+			padding: 0 50px;
+			font-size: 20px;
+			cursor: pointer;
+		}
+		.buy_left .set_format p strong {
+			cursor: pointer;
+			font-size: 18px;
+		}
+		.buy_right h2 {
+			font-size: 27px;
+			padding-bottom: 5px;
+		}
+		.buy_right textarea {
+			width: 90%;
+			height: 70px;
+			resize: none;
+		}
+		.buy_right select {
+		    padding: 11px 20px 9px 20px;
+		    margin: 0;
+		    -webkit-border-radius: 4px;
+		    -moz-border-radius: 4px;
+		    border-radius: 4px;
+		    -webkit-box-shadow: 0 1px 0 #ddd, 0 -1px #f0f0f0 inset;
+		    -moz-box-shadow: 0 1px 0 #ddd, 0 -1px #f0f0f0 inset;
+		    box-shadow: 0 1px 0 #ddd, 0 -1px #f0f0f0 inset;
+		    background: #f0f0f0;
+		    color: #222;
+		    border: none;
+		    font-size: 15px;
+		    font-family: 'Lato';
+		    font-weight: 300;
+		    outline: none;
+		    display: inline-block;
+		    -webkit-appearance: none;
+		    -moz-appearance: none;
+		    appearance: none;
+		    cursor: pointer;
+		    margin-right: 12px;
+		    margin-bottom: 20px;
+		}
+		.more_img{
+		    bottom: 20px;
+		    border-top: 1px solid #222;
+		    text-align: center;
+		    padding: 50px 0px 100px 0px;
+		}
+		.more_img span{
+			padding: 7px 0px 10px 0px;
+		    /*border-bottom: 1px solid #444;*/
+		    text-transform: uppercase;
+		    margin: 0px 20px 0px 20px;
+		    color: #666;
+		    font-size: 19px;
+		    font-family: 'ProximaNovaT-Thin';
+		    letter-spacing: 1px;
+		    cursor: pointer;
+		}
 	</style>
 </head>
 <body>
@@ -160,120 +254,293 @@
 		<img src="__PUBLIC_PIPACKER__/pipacker/images/cover5.jpg" alt="">
 	</div>
 	<div class="show_content">
-			<ul>
-				{foreach $pp_list as $key=>$item}
-				<li class="show_content_img">
-					<a href="#browse_modal" data-toggle="modal"><img src="{$item['works_src']}" data-pid="{$item['works_id']}" data-id="{$key}" alt="" class="show_content_small_img"></a>
-				</li>
-				{/foreach}
-			</ul>
+		<ul>
+			{foreach $pp_list as $key=>$item}
+			<li class="show_content_img">
+				<a href="#browse_modal" data-toggle="modal"><img src="{$item['works_src']}" data-pid="{$item['works_id']}" data-id="{$key}" alt="" class="show_content_small_img"></a>
+			</li>
+			{/foreach}
+		</ul>
+		<div class="more_img">
+			<span class="more">发现更多</span>
 		</div>
-		<div class="modal fade" id="browse_modal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-						<div class="browse_big_img">
-				           <div class="swiper-slide"><img src="{$item['works_src']}" class="show_content_small_img"></div>
-				           <span class="pre_btn hf_btn glyphicon glyphicon-chevron-left"></span>
-				           <span class="next_btn hf_btn glyphicon glyphicon-chevron-right"></span>
-						</div>
-						<div class="menu_right">
-							<h4 class="pic_title">一个很有感觉的时间</h4>
-							<p>&copy;作者</p>
+	</div>
+	<div class="modal fade" id="browse_modal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+					<div class="browse_big_img">
+			            <div class="swiper-slide">
+			           		<img src="" class="show_content_small_img">
+		           		</div>
+			           <span class="pre_btn hf_btn glyphicon glyphicon-chevron-left"></span>
+			           <span class="next_btn hf_btn glyphicon glyphicon-chevron-right"></span>
+					</div>
+					<div class="menu_right">
+						<div style="width: 165px;">
+							<h4 class="pic_title"></h4>
+							<p id="author">&copy;作者</p>
 							<div class="tags">
-								{foreach $tags as $item}
-									<span>#{$item}</span>
-								{/foreach}
+							</div>
+							<div style="width: 100%; position: relative; left: 5px; top: 200px;">
+								<button class="btn btn-success" style="width: 90%;" data-toggle="modal" data-target="#buy_modal" data-dismiss="modal">买买买</button>
+								<br>
+								<br>
+								<button class="btn btn-default" style="width: 90%;">添加到收藏夹</button>
 							</div>
 						</div>
 					</div>
-					<div class="cancel" data-dismiss="modal">X</div>
-			</div>
+				</div>
+				<div class="cancel" data-dismiss="modal">X</div>
 		</div>
-		<script>
-			$(function(){
-				var pic_id = 0;
-				var data = $.parseJSON('{$json_pp}');
-				var pre_lock = true;
-				var next_lock = true;
-				var $browse_img = $('.browse_big_img');
-				$('.show_content').on('click',function(e){
-					var this_elm = $(e.target);
-					if(this_elm.hasClass('show_content_small_img')){
-						var $img = this_elm.parents('ul').find('li').find('img');
-						var $val = this_elm.attr('src');
-						var index = this_elm.attr('data-id');
-						pic_id = this_elm.attr('data-pid');
-						console.log(pic_id);
-						$browse_img.find('img').attr('src',$val);
-						var  str = '';
-						for(var i=0;i<data[index].works_type.length;i++){
-							str += "<span> #"+data[index].works_type[i]+"</span>";
-						}
-						$(".tags").html($(str));
-						$(".pic_title").text(data[index].works_title);
-					}
-				});
-				$browse_img.on('click',function(e){
-					var this_elm = $(e.target);
-					if(this_elm.hasClass('pre_btn')){
-						if(pre_lock){
-							browse_img(1);
-						}else{
-							alert("已经是第一张了");
-						}
-						// $browse_img.find('img').attr('src','__PUBLIC_PIPACKER__/pipacker/images/bg.jpg');
-					}else if(this_elm.hasClass('next_btn')){
-						if(next_lock){
-							browse_img(0);
-						}else{
-							alert("已经是最后一张了");
-						}	
-					}
-				});
-			 // var galleryTop = new Swiper('.gallery-top', {
-			 //        nextButton: '.swiper-button-next',
-			 //        prevButton: '.swiper-button-prev',
-			 //        spaceBetween: 10,
-			 //        observer:true,//修改swiper自己或子元素时，自动初始化swiper
-    		 //	observeParents:true//修改swiper的父元素时，自动初始化swiper
-			 //    });
-			 function browse_img(ew){
-			 	$.ajax({
-							url: '/public/pipacker/Prints/browse',
-							type: 'post',
-							data: {'id':pic_id,'ew':ew},
-						})
-						.done(function(data) {
-							if(!$.isEmptyObject(data)){
-								var redata = $.parseJSON(data);
-								if(1==redata.has){
-									var pic_url = redata.works_src;
-									$browse_img.find('img').attr('src',"/"+pic_url);
-									// console.log(pic_url);
-									var str ="";
-									for(var i=0;i<redata.works_type.length;i++){
-										str += "<span> #"+redata.works_type[i]+"</span>";
-									}
-									$(".tags").html($(str));
-									$(".pic_title").text(redata.works_title);
-									pic_id = redata.works_id;
-								}else{
-									if(1==ew){
-										pre_lock = false;
-										next_lock = true;
-										alert("已经是第一张了");
-									}else{
-										pre_lock = true;
-										next_lock = false;
-										alert("已经是最后一张了");
-									}
+	</div>
+	<div class="modal fade" id="buy_modal">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content" style="overflow: auto;">
+	    	<div class="modal-body">
+	        	<div class="buy_left">
+	        		<h1>我要买它</h1>
+	        		<img class="s_img" src="{$item['works_src']}">
+	        		<table>
+	        			<tr>
+	        				<td>图片ID</td>
+	        				<td><span style="font-weight: 600; color: #333;"  id="works_id">12</span></td>
+	        			</tr>
+	        			<tr>
+	        				<td>图片名字</td>
+	        				<td><span style="font-weight: 600; color: #333;"  id="works_title">我卡无人机会</span></td>
+	        			</tr>
+	        			<tr>
+	        				<td>摄影师</td>
+	        				<td><span style="font-weight: 600; color: #333;"  id="user_name">干啥土豪i</span></td>
+	        			</tr>
+	        		</table>
+	        		<h2>选择规格</h2>
+	        		<div class="set_format">
+	        			<p>
+	        				<input type="radio" class="pay_radio" id="sm_format" name="format" checked><label for="sm_format"><span class="format_sz">10×10</span><strong>￥<span class="pay_num">100</span></strong></label>
+	        			</p>
+	        			<p>
+	        				<input type="radio" class="pay_radio" id="md_format" name="format"><label for="md_format"><span class="format_sz">100×100</span><strong>￥<span class="pay_num">1000</span></strong></label>
+	        			</p>
+	        			<p>
+	        				<input type="radio" class="pay_radio" id="lg_format" name="format"><label for="lg_format"><span class="format_sz">1000×1000</span><strong>￥<span class="pay_num">10000</span></strong></label>
+	        			</p>
+        				<p style="padding-bottom: 5px;">免运费</p>
+	        		</div>
+	        	</div>
+	        	<div class="buy_right">
+	        		<h2>付款</h2>
+	        		<p>收货地址</p>
+	        		<textarea></textarea>
+	        		<p>付款方式</p>
+	        		<p>
+	        			<select class="pay_type">  
+							<option value ="微信支付">微信支付</option>  
+							<option value ="支付宝">支付宝</option>
+						</select>
+						<img src="__PUBLIC_PIPACKER__/pipacker/images/weixinzhifu.jpg">
+						<img src="__PUBLIC_PIPACKER__/pipacker/images/zhifubao.jpg">
+	        		</p>
+					<button class="btn btn-success btn-lg pay_money" style="margin-right: 15px;">付款￥1000</button>
+					<button class="btn btn-default btn-lg" style="color: #fff; background: #444;" data-dismiss="modal">我不想买了</button>
+	        	</div>
+	    	</div>
+	    </div>
+		<div class="cancel" data-dismiss="modal">X</div>
+	  </div>
+	</div>
+	<script>
+	// $(function(){
+	// 		var pic_id = 0;
+			var datapp = $.parseJSON('{$json_pp}');
+	// 		var pre_lock = true;
+	// 		var next_lock = true;
+	// 		var $browse_img = $('.browse_big_img');
+	// 		$('.show_content').on('click',function(e){
+	// 			var this_elm = $(e.target);
+	// 			if(this_elm.hasClass('show_content_small_img')){
+					// var $img = this_elm.parents('ul').find('li').find('img');
+					// var $val = this_elm.attr('src');
+					// var index = this_elm.attr('data-id');
+					// pic_id = this_elm.attr('data-pid');
+					// console.log(pic_id);
+					// $browse_img.find('img').attr('src',$val);
+					// var  str = '';
+					// for(var i=0;i<data[index].works_type.length;i++){
+					// 	str += "<span> #"+data[index].works_type[i]+"</span>";
+					// }
+					// $(".tags").html($(str));
+					// $(".pic_title").text(data[index].works_title);
+	// 			}
+	// 		});
+	// 		$browse_img.on('click',function(e){
+	// 			var this_elm = $(e.target);
+	// 			if(this_elm.hasClass('pre_btn')){
+	// 				if(pre_lock){
+	// 					browse_img(1);
+	// 				}else{
+	// 					alert("已经是第一张了");
+	// 				}
+	// 				// $browse_img.find('img').attr('src','__PUBLIC_PIPACKER__/pipacker/images/bg.jpg');
+	// 			}else if(this_elm.hasClass('next_btn')){
+	// 				if(next_lock){
+	// 					browse_img(0);
+	// 				}else{
+	// 					alert("已经是最后一张了");
+	// 				}	
+	// 			}
+	// 		});
+	// 	 // var galleryTop = new Swiper('.gallery-top', {
+	// 	 //        nextButton: '.swiper-button-next',
+	// 	 //        prevButton: '.swiper-button-prev',
+	// 	 //        spaceBetween: 10,
+	// 	 //        observer:true,//修改swiper自己或子元素时，自动初始化swiper
+		 //	observeParents:true//修改swiper的父元素时，自动初始化swiper
+	// 	 //    });
+	// 		function browse_img(ew){
+	// 		 	$.ajax({
+	// 				url: '/public/pipacker/Prints/browse',
+	// 				type: 'post',
+	// 				data: {'id':pic_id,'ew':ew},
+	// 			})
+	// 			.done(function(data) {
+	// 				if(!$.isEmptyObject(data)){
+	// 					var redata = $.parseJSON(data);
+	// 					if(1==redata.has){
+	// 						var pic_url = redata.works_src;
+	// 						$browse_img.find('img').attr('src',"/"+pic_url);
+	// 						// console.log(pic_url);
+	// 						var str ="";
+	// 						for(var i=0;i<redata.works_type.length;i++){
+	// 							str += "<span> #"+redata.works_type[i]+"</span>";
+	// 						}
+	// 						$(".tags").html($(str));
+	// 						$(".pic_title").text(redata.works_title);
+	// 						pic_id = redata.works_id;
+	// 					}else{
+	// 						if(1==ew){
+	// 							pre_lock = false;
+	// 							next_lock = true;
+	// 							alert("已经是第一张了");
+	// 						}else{
+	// 							pre_lock = true;
+	// 							next_lock = false;
+	// 							alert("已经是最后一张了");
+	// 						}
+	// 					}
+	// 				}else{
+	// 					alert("页面走丢了");
+	// 				}
+	// 			});
+	// 		 }
+	// });
+
+	$(function(){
+		var page = 1;
+		var more_lock = true;
+        var works_id = localStorage.getItem("apic_id");     
+    	var $thumbnails = $('.pic_title');
+        var $browse_img = $('.browse_big_img');
+        var $works_tags = $('.tags');
+        var $user_name = $('#author');
+        $.ajax({
+          url: "{:url('/qworks/Apic')}",
+          type: 'get',
+          data: {"works_id": works_id},
+        });
+        var $browse_small_img = $(".show_content");
+        $browse_small_img.on("click",function(e) {
+        	page=1;
+        	var this_elm = $(e.target);
+        	if (this_elm.hasClass("show_content_small_img")) {
+        		var apic_id = this_elm.attr("data-pid");
+        		localStorage.setItem("apic_id", apic_id);
+        		works_id = apic_id;
+        		var $img = this_elm.parents('ul').find('li').find('img');
+				var $val = this_elm.attr('src');
+				var index = this_elm.attr('data-id');
+				pic_id = this_elm.attr('data-pid');
+				console.log(datapp[index]);
+				$browse_img.find('img').attr('src',$val);
+				var  str = '';
+				for(var i=0;i<datapp[index].works_tags.length;i++){
+					str += "<span> #"+datapp[index].works_tags[i]+"</span>";
+				}
+				$(".tags").html($(str));
+				$(".pic_title").text(datapp[index].works_title);
+				$("#author").text(datapp[index].user_name);
+				$(".s_img").attr("src", datapp[index].works_src);
+				$("#works_id").text(datapp[index].works_id);
+				$("#works_title").text(datapp[index].works_title);
+				$("#user_name").text(datapp[index].user_name);
+				more_lock = true;
+				$(".more").text("发现更多");
+        	}
+        });
+        var data = {
+      		"url":"{:url('/qworks/Apic')}",
+          	"browse_img":$browse_img,//包裹图片的盒子
+      		"thumbnails":$thumbnails,//图片简介
+      		"user_name":$user_name,//图片简介
+      		"tags":$works_tags,//图片简介
+          	"works_id":works_id//当前图片id
+        };
+        var browse_img_btn = new browse_img_hf(data);//新建
+        browse_img_btn.init();//初始化
+
+
+        $(".more").on('click',function(){
+			page++;
+			// console.log(page);
+			if(more_lock){
+				$.ajax({
+					url:"{:url('/qworks/Apic')}",
+					type:"get",
+					data:{"page":page},
+					success:function(data){
+						if(!$.isEmptyObject(data)){
+							redata = $.parseJSON(data);
+							var str = '';
+							if(0==redata.status){
+								for(var i=0;i<redata.rearray.length;i++){
+								str+='<li class="show_content_img"><a href="javascript:;">'+
+								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
+								 '<p>© '+redata.rearray[i].user_name+'</p></a></li>';
 								}
+								$show_img_list.find(".show_img_ul").append($(str));
 							}else{
-								alert("页面走丢了");
+								more_lock = false;
+								$(".more").text("没有啦");
 							}
-						});
-			 }
+						}
+					}
+				});
+			}else{
+				$(".more").text("没有啦");
+			}
+		});
+
+		function pay_money_chg() {
+			$(".pay_radio").each( function(index, el) {
+				if ($(el).attr("checked")=="checked") {
+					var pay_num = $(this).parent().find(".pay_num").text();
+					$(".pay_money").text("付款￥"+pay_num);
+				}
 			});
-		</script>
+			$(".set_format").on("click",function() {
+				$(".pay_radio").each( function(index, el) {
+					if ($(el).prop("checked")==true) {
+						var pay_num = $(this).parent().find(".pay_num").text();
+						$(".pay_money").text("付款￥"+pay_num);
+					}
+				})
+			})
+			// console.log($(".pay_radio"));
+		}
+		pay_money_chg();
+    });
+       
+	// });
+	</script>
 </body>
 </html>
